complete netflix clone(minor fixes needed + not responsive)

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: "Poppins", sans-serif;
     padding:0;
     margin:0;
+    text-decoration-color: rgba(255, 255, 255, 0.7);
 }
 body{
     background-color: black;
@@ -296,6 +297,7 @@ color:rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
     margin-top: 20px;
+    margin-bottom: 62px;
 }
 .more-card{
     position: relative;
@@ -325,14 +327,63 @@ color:rgb(255, 255, 255);
 }
 .question{
     display: flex;
-    flex-direction: column;
-}
-.question{
+    flex-direction: row;
+    
     width: 100%;
     background-color: #2e2e2e;
     margin: 7px;
     height: 44px;
     font-size: 24px;
     padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+.question:hover{
+     background-color: rgb(60, 60, 60);
+}
+.end{
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 55px;
+}
+.end> :nth-child(1) {
+    color:rgb(255, 255, 255);
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+footer{
+    color:rgba(255, 255, 255, 0.7);
+        margin-bottom: 150px;
+}
+footer ul{
+    font-size: 14px;
+}
+
+ul{
+    list-style: none;
+    padding:0;
+    width:400px;
+}
+
+li{
+    display:flex;
+    border:1px solid black;
+}
+
+li span{
+    flex:1;
+    padding:8px;
+    border-right:1px solid black;
+}
+li span:last-child{
+    border-right:none;
+}
+footer a{
+    color: rgba(255,255,255,0.7);
+}
+footer .lang-select{
+   margin-top: 55px;
 }
